# emmaBot

./: .gitignore  Cargo.toml  EXAMPLE.env  README.md  config.json  docker-compose.yml  dockerfile  flake.nix  schema.sql  shell.nix
.github/workflows/: build-docker.yml
.sqlx/: query-0761e70fc1429a88551c3619341fa50938f1bc6e1e8be07dcf58cc8766b506aa.json  query-4c07495a6ce7fbf85933e7e03d8a6e7de5fbb0cfa05fd3346011881714ac318a.json  query-51637e00be31d685943734b6de848843ce2f6a9dfe7608ef4d601fbff769c75d.json  query-7c525a9557c3e164f9f0c860ccf5d277b0a685592e3833898f7ea63b421bd932.json  query-8afe301e7e5141baf85605279f73626c11ab038c0bf63797bd668f783d809823.json  query-9456df26b24c3427b2611b6f610588e12bb129b91159314284605f3fcd601ead.json  query-ec55256879789f6951fa0653ad95e2641ce31836c4c8c05db77b766b97d82a2a.json  query-fe1ad783ff0f0689d657b83ee1794011e9327054dfb66caa617ab75e0b2d355b.json
data/: config.json
migrations/: 20240317115104_init.sql  20240317115820_addDisableDisconnect.sql  20240324134551_JokeChanceConfig.sql
src/: config.rs  lib.rs  main.rs
src/commands/: joke_config.rs  mod.rs  vcping.rs
src/messages/: jokes.rs  mod.rs  owner.rs
src/voice_state_update/: mod.rs
