[package]
name = "lukas-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.69"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "sqlite",
] }
fancy-regex = "0.11.0"
serde_regex = "1.1.0"
rand = "0.8.5"
