[package]
name = "lukas-bot"
version = "0.2.2"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.69"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "rustls_backend",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
] }
fancy-regex = "0.11.0"
serde_regex = "1.1.0"
rand = "0.8.5"
dotenv = "0.15.0"
